[package]
name = "rustbook"
description = "Playing with examples from the rustbook"
version = "0.2.0"
authors = ["kodeaffe <lahi+kodeaffe@posteo.de>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3